Fix input outline covered by addon

--- a/components/input/style/mixin.less
+++ b/components/input/style/mixin.less
@@ -20,6 +20,7 @@
   border-color: ~`colorPalette("@{color}", 5)`;
   outline: 0;
   box-shadow: 0 0 @outline-blur-size @outline-width fade(@color, 20%);
+  z-index: 1; // Fix https://gw.alipayobjects.com/zos/rmsportal/DHNpoqfMXSfrSnlZvhsJ.png
 }
 
 // == when hoverd
